--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,32 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.14
 aiosignal==1.3.2
+alchemy==20.5
+alembic==1.15.1
 annotated-types==0.7.0
 anyio==4.8.0
+asyncpg==0.30.0
 attrs==25.3.0
 certifi==2025.1.31
+chardet==3.0.4
 click==8.1.8
 dnspython==2.7.0
+docutils==0.21.2
 email_validator==2.2.0
 fastapi==0.115.11
 fastapi-cli==0.0.7
 fastapi-pagination==0.12.34
+filelock==3.0.12
 frozenlist==1.5.0
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
-idna==3.10
+idna==2.8
 Jinja2==3.1.6
+lockfile==0.12.2
+Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
@@ -27,16 +36,21 @@ pydantic==2.10.6
 pydantic-settings==2.8.1
 pydantic_core==2.27.2
 Pygments==2.19.1
+python-daemon==2.2.4
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.22.0
 rich==13.9.4
 rich-toolkit==0.13.2
 shellingham==1.5.4
 sniffio==1.3.1
+sql==2022.4.0
+SQLAlchemy==2.0.39
 starlette==0.46.1
 typer==0.15.2
 typing_extensions==4.12.2
+urllib3==1.25.11
 uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.4
