--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ annotated-types==0.7.0
 anyio==4.8.0
 asyncpg==0.30.0
 attrs==25.3.0
+black==25.1.0
 certifi==2025.1.31
 chardet==3.0.4
 click==8.1.8
@@ -26,11 +27,16 @@ httpx==0.28.1
 idna==2.8
 Jinja2==3.1.6
 lockfile==0.12.2
+loguru==0.7.3
 Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 multidict==6.2.0
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.7
 propcache==0.3.0
 pydantic==2.10.6
 pydantic-settings==2.8.1
