--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ annotated-types==0.7.0
 anyio==4.8.0
 asyncpg==0.30.0
 attrs==25.3.0
+bcrypt==4.3.0
 black==25.1.0
 certifi==2025.1.31
 chardet==3.0.4
@@ -35,6 +36,7 @@ mdurl==0.1.2
 multidict==6.2.0
 mypy-extensions==1.0.0
 packaging==24.2
+passlib==1.7.4
 pathspec==0.12.1
 platformdirs==4.3.7
 propcache==0.3.0
@@ -42,6 +44,7 @@ pydantic==2.10.6
 pydantic-settings==2.8.1
 pydantic_core==2.27.2
 Pygments==2.19.1
+PyJWT==2.10.1
 python-daemon==2.2.4
 python-dotenv==1.0.1
 python-multipart==0.0.20
